# mailing_demon

./: README.md  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  index.html
blog/templatetags/: tag.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_clients_owner.py  0002_remove_clients_first_name_remove_clients_last_name_and_more.py
clients/templates/clients/: base.html  clients_confirm_delete.html  clients_detail.html  clients_form.html  clients_list.html  home.html
config/: settings.py  urls.py
fixtures/: blog_data.json  clients_data.json  groups_data.json  letters_data.json  mailings_data.json  reporting_data.json  users_data.json
letters/: admin.py  forms.py  models.py  urls.py  views.py
letters/migrations/: 0001_initial.py  0002_message_owner.py
letters/templates/letters/: message_detail.html  (+3 more)
mailings/: admin.py  apps.py  forms.py  models.py  services.py  start_scheduler.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_alter_mailings_status.py  0002_mailings_name.py  0002_mailings_owner.py  0003_alter_mailings_owner.py  0003_message.py  0004_mailings_is_active.py
reporting/: admin.py  apps.py  models.py  urls.py  views.py
reporting/migrations/: 0001_initial.py  0002_reporting_mailings.py  0003_remove_reporting_response.py
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+13 files in other folders)
