[tool.poetry]
name = "mailing-demon"
version = "0.1.0"
description = ""
authors = ["т"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
apscheduler = "^3.10.4"
load-dotenv = "^0.1.0"
django = "^5.0.3"
django-apscheduler = "^0.6.2"
psycopg2 = "^2.9.9"
python-dateutil = "^2.9.0.post0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
